[tool.poetry]
name = "pippin-dependency-data"
version = "0.1.0"
description = ""
authors = ["Assaf Lavie <lavie@tensorleap.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.16.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
